new background color

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ html, body {
 }
 
 body {
-  background-color: #fcf988;
+  background-color: #bbecfa;
   display: flex;
   justify-content: center;
   align-items: center;
